# procedural-terrain-generation

./: .gitignore  CMakeLists.txt  README.md  readme-hw1.txt  readme-hw2.txt  readme-hw3.txt  readme-hw4.txt
common/: FindGLFW3.cmake  check_error_gl.h  icg_helper.h  icg_settings.cmake
hmw1/1_triangle_spirals/: CMakeLists.txt  main.cpp
hmw1/1_triangle_spirals/triangle/: triangle.h  triangle_fshader.glsl  triangle_vshader.glsl
hmw1/common/: FindGLEW.cmake  FindGLM.cmake
hmw1/hw2p1_spiral/: main.cpp
hmw1/hw2p2_checkerboard/quad/: quad_fshader.glsl
hmw1/hw2p3_planets/: CMakeLists.txt  main.cpp
hmw1/hw2p3_planets/quad/: quad.h  quad_fshader.glsl
hw1p1_spiral/: CMakeLists.txt
hw1p1_spiral/triangle/: triangle.h
hw1p2_checkerboard/: main.cpp
hw1p2_checkerboard/quad/: quad.h  quad_fshader.glsl  quad_vshader.glsl
hw1p3_planets/: CMakeLists.txt
hw1p3_planets/quad/: earth.tga  moon.tga  quad.h  sun.tga
hw1p4_arkanoid/: main.cpp
hw1p4_arkanoid/quad/: quad_fshader.glsl  quad_vshader.glsl
hw2_trackball/: CMakeLists.txt  main.cpp  trackball.h
hw2_trackball/cube/: cube.h  cube_fshader.glsl  cube_vshader.glsl
hw2_trackball/grid/: grid.h  grid_texture.tga  grid_vshader.glsl
hw2p1_spiral/: main.cpp
hw2p1_spiral/triangle/: triangle_fshader.glsl  triangle_vshader.glsl
hw2p2_checkerboard/: CMakeLists.txt
hw2p3_planets/: main.cpp
hw2p3_planets/quad/: quad_fshader.glsl  space.tga
hw2p4_arkanoid/: CMakeLists.txt  ball.h  main.cpp  paddle.h  walls.h
hw2p4_arkanoid/quad/: quad.h
hw3_shading/: CMakeLists.txt  main.cpp
hw3_shading/mesh/: art_fshader.glsl  art_vshader.glsl  flat_fshader.glsl  flat_vshader.glsl  gouraud_fshader.glsl  gouraud_vshader.glsl  mesh.h  mesh_fshader.glsl  mesh_vshader.glsl  phong_fshader.glsl  phong_vshader.glsl  spot_fshader.glsl  spot_vshader.glsl  texture.h  toon_fshader.glsl  toon_vshader.glsl
hw3_shading/quad/: quad.h
hw4p1_fastsmooth/: CMakeLists.txt  framebuffer.h  main.cpp
hw4p1_fastsmooth/cube/: cube_vshader.glsl
hw4p1_fastsmooth/quad/: quad.h  quad_fshader.glsl  quad_vshader.glsl
hw4p1_fastsmooth/screenquad/: screenquad.h  screenquad_fshader.glsl
hw4p2_mirrorfloor/: CMakeLists.txt  framebuffer.h  main.cpp
hw4p2_mirrorfloor/cube/: cube.h  cube_fshader.glsl  cube_vshader.glsl
hw4p2_mirrorfloor/floor/: floor.h  floor_fshader.glsl
hw4p3_motionblur/: CMakeLists.txt  framebuffer.h  main.cpp
hw4p3_motionblur/quad/: quad.h  quad_fshader.glsl  quad_vshader.glsl  wheel_texture.tga
hw4p3_motionblur/screenquad/: screenquad.h  screenquad_fshader.glsl
project/: .~lock.Rapport - Part 1.odt#  CMakeLists.txt  Rapport - Part 1.odt  bezier.h  framebuffer.h  imgui_impl_glfw_gl3.cpp  main.cpp  shadows.h
project/cube/: cube.h  cube_fshader.glsl  cube_vshader.glsl
project/floor/: floor.h  floor_fshader.glsl
project/heightmap/: heightmap.h  heightmap_fshader.glsl  heightmap_vshader.glsl
project/screenquad/: screenquad.h  screenquad_fshader.glsl  screenquad_vshader.glsl
project/skybox/: skybox.h  skybox_fshader.glsl  skybox_vshader.glsl
project/terrain/: terrain.h  terrain_fshader.glsl  terrain_snow_texture.tga  terrain_tcshader.glsl  terrain_teshader.glsl  terrain_texture.tga  terrain_vshader.glsl
project/water/: water.h  water_fshader.glsl  water_vshader.glsl
